--- a/public/index.jade
+++ b/public/index.jade
@@ -3,7 +3,7 @@ html
   head
   body
     h4
-      a(href="NewNote") Add Note
+      a(href="Edit/") Add Note
     h1 Notes:
     ol
       each note in notes
