Added some basic templates for theorems, definitions and remarks

--- a/public/Edit.jade
+++ b/public/Edit.jade
@@ -55,6 +55,16 @@ html(lang="en")
               placeholder='Title'
             )
             br
+            #templates
+              button#theoremButton(
+                type='button'
+              ) Theorem
+              button#definitionButton(
+                type='button'
+              ) Definition
+              button#remarkButton(
+                type='button'
+              ) Remark
             textarea#content(
               name='content',
               placeholder='Content',
